feat(stage_04): Add model training step

--- a/notebooks/04_model_trainer.ipynb
+++ b/notebooks/04_model_trainer.ipynb
@@ -37,15 +37,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update entity\n",
+    "# Config entity\n",
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class DataTransformationConfig:\n",
+    "class ModelTrainerConfig:\n",
     "    root_dir: Path\n",
-    "    data_path: Path"
+    "    train_data_path: Path\n",
+    "    test_data_path: Path\n",
+    "    model_name: str\n",
+    "    alpha: float\n",
+    "    l1_ratio: float\n",
+    "    target_column: str"
    ]
   },
   {
@@ -54,17 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update configuration manager\n",
+    "# Configuration manager\n",
     "from src.aws_mlflow_mlops.constants import *\n",
-    "from src.aws_mlflow_mlops.utils.common import read_yaml, create_directories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from src.aws_mlflow_mlops.utils.common import read_yaml, create_directories\n",
+    "\n",
+    "\n",
     "class ConfigurationManager:\n",
     "    \"\"\"\n",
     "    The ConfigurationManager class is responsible for managing the configuration of the data ingestion process.\n",
@@ -96,91 +95,103 @@
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
-    "    def get_data_transformation_config(self) -> DataTransformationConfig:\n",
+    "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
     "        \"\"\"\n",
-    "        The method to get the data transformation configuration.\n",
+    "        The method to get the model trainer configuration.\n",
     "\n",
-    "        This method retrieves the data transformation configuration from the main configuration object,\n",
-    "        creates a DataTransformationConfig instance with the root directory and data path from the configuration,\n",
+    "        This method retrieves the model trainer configuration from the main configuration object,\n",
+    "        the ElasticNet parameters, and the target column schema.\n",
+    "        It creates the directories for the root directory in the configuration if they do not exist,\n",
+    "        creates a ModelTrainerConfig instance with the root directory, train data path, test data path, model name,\n",
+    "        alpha, l1_ratio, and target column name from the configuration, parameters, and schema,\n",
     "        and returns this instance.\n",
     "\n",
     "        Returns:\n",
-    "            DataTransformationConfig: An instance of DataTransformationConfig with the root directory and data path from the configuration.\n",
+    "            ModelTrainerConfig: An instance of ModelTrainerConfig with the root directory, train data path, test data path,\n",
+    "            model name, alpha, l1_ratio, and target column name from the configuration, parameters, and schema.\n",
     "        \"\"\"\n",
-    "        config = self.config.data_transformation\n",
+    "        config = self.config.model_trainer\n",
+    "        params = self.params.ElasticNet\n",
+    "        schema = self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
     "\n",
-    "        data_transformation_config = DataTransformationConfig(\n",
+    "        model_trainer_config = ModelTrainerConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            data_path=config.data_path,\n",
+    "            train_data_path=config.train_data_path,\n",
+    "            test_data_path=config.test_data_path,\n",
+    "            model_name=config.model_name,\n",
+    "            alpha=params.alpha,\n",
+    "            l1_ratio=params.l1_ratio,\n",
+    "            target_column=schema.name,\n",
     "        )\n",
     "\n",
-    "        return data_transformation_config"
+    "        return model_trainer_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update components\n",
+    "# Define component\n",
     "import os\n",
+    "\n",
+    "import joblib\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import ElasticNet\n",
     "\n",
     "from src.aws_mlflow_mlops import logger\n",
     "\n",
     "\n",
-    "class DataTransformation:\n",
-    "    def __init__(self, config: DataTransformationConfig):\n",
+    "class ModelTrainer:\n",
+    "    def __init__(self, config: ModelTrainerConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    def train_test_splitting(self):\n",
-    "        data = pd.read_csv(self.config.data_path)\n",
+    "    def train(self):\n",
+    "        train_data = pd.read_csv(self.config.train_data_path)\n",
+    "        test_data = pd.read_csv(self.config.test_data_path)\n",
     "\n",
-    "        train, test = train_test_split(data, test_size=0.2, random_state=42)\n",
+    "        train_x = train_data.drop(self.config.target_column, axis=1)\n",
+    "        test_x = test_data.drop(self.config.target_column, axis=1)\n",
+    "        train_y = train_data[[self.config.target_column]]\n",
+    "        test_y = test_data[[self.config.target_column]]\n",
     "\n",
-    "        train.to_csv(os.path.join(self.config.root_dir, \"train.csv\"), index=False)\n",
-    "        test.to_csv(os.path.join(self.config.root_dir, \"test.csv\"), index=False)\n",
+    "        lr = ElasticNet(\n",
+    "            alpha=self.config.alpha, l1_ratio=self.config.l1_ratio, random_state=42\n",
+    "        )\n",
+    "        lr.fit(train_x, train_y)\n",
     "\n",
-    "        logger.info(\"Split data into train and test sets.\")\n",
-    "        logger.info(f\"Train shape: {train.shape}\\n Test shape:{test.shape}\")\n",
-    "\n",
-    "        print(f\"Train shape: {train.shape}\\n Test shape:{test.shape}\")"
+    "        joblib.dump(lr, os.path.join(self.config.root_dir, self.config.model_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-11-14 15:58:09,600: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2023-11-14 15:58:09,602: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-11-14 15:58:09,604: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-11-14 15:58:09,605: INFO: common: created directory at: artifacts]\n",
-      "[2023-11-14 15:58:09,606: INFO: common: created directory at: artifacts/data_transformation]\n",
-      "[2023-11-14 15:58:09,668: INFO: 2936060203: Split data into train and test sets.]\n",
-      "[2023-11-14 15:58:09,669: INFO: 2936060203: Train shape: (1279, 12)\n",
-      " Test shape:(320, 12)]\n",
-      "Train shape: (1279, 12)\n",
-      " Test shape:(320, 12)\n"
+      "[2023-11-22 17:42:44,628: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2023-11-22 17:42:44,629: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-11-22 17:42:44,632: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-11-22 17:42:44,632: INFO: common: created directory at: artifacts]\n",
+      "[2023-11-22 17:42:44,633: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     }
    ],
    "source": [
+    "# Pipeline\n",
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    data_transformaton_config = config.get_data_transformation_config()\n",
-    "    data_transformation = DataTransformation(data_transformaton_config)\n",
-    "    data_transformation.train_test_splitting()\n",
+    "    model_trainer_config = config.get_model_trainer_config()\n",
+    "    model_trainer_config = ModelTrainer(config=model_trainer_config)\n",
+    "    model_trainer_config.train()\n",
     "except Exception as e:\n",
-    "    logger.exception(\"Failed to run data transformation.\")\n",
+    "    logger.error(e)\n",
     "    raise e"
    ]
   },
